--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: parse-express-layouts
 description: Layout support for express on parse.com
 google_analytics: UA-45109286-9
 show_downloads: true
-theme: jekyll-theme-leap-day
+theme: jekyll-theme-cayman
 
 gems:
   - jekyll-mentions
